fixed fb login button alignment

--- a/sites/all/themes/md_minimal/css/style.css
+++ b/sites/all/themes/md_minimal/css/style.css
@@ -239,9 +239,15 @@ ul.pager {
 
 /* HEADER
 -----------------------------------*/
+
+#fblogin {
+	float: right;
+	margin-top: 10px;
+}
+
 #logo {
-	padding: 30px 0 10px;
-	text-align: center
+	text-align: center;
+	clear: both;
 }
 
 #navigation {
